[package]
name = "aoc2019"
version = "0.1.0"
authors = ["hjaremko <hjaremko@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.9.22"
paste = "0.1"
clap = {version = "2.33", features = ["yaml"]}
